src/test/deca/context/invalid/and_string_and_int.deca
// Description :
// 
//      Test syntaxiquement correct de "bonjour"&&5
// 
// Résultats : 
// 
//      N/A
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    boolean y = "bonjour"&&5;
}